[package]
name = "lf-slots"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
  ".",
  "profiling"
]

[workspace.package]
edition = "2024"
authors = ["Louis Meller louis.meller@icloud.com"]
description = "Atomic, lock-free index store using a bitset"
# documentation = "TODO"
readme = "README.md"
license = "MIT"
repository = "https://github.com/lmeller-git/lf-slots"
keywords = ["mpmc", "no_std", "atomic", "lock-free"]
categories = ["data-structures", "algorithms", "concurrency", "no-std"]
rust-version = "1.95.0"

[features]
default = []
std = ["alloc", "dep:thread_local"]
alloc = []
atomic-fallback = ["portable-atomic/fallback"]

[dependencies]
crossbeam-utils = { version = "0.8.21", default-features = false }
portable-atomic = { version = "1.13.1", default-features = false, features = ["require-cas"] }
thread_local = { version = "1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
crossbeam-queue = "0.3.13"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[target.'cfg(shuttle)'.dependencies]
shuttle = "0.9"

[target.'cfg(echeneis)'.dependencies]
echeneis = { version = "0.1", features = ["portable-atomic", "atomic-fallback"] }

[lints]
workspace = true

[[bench]]
name = "main_benchmarks"
harness = false

[profile.profiling]
inherits = "release"
debug = true
lto = "thin"

[workspace.lints.rust]
unknown-lints = "allow"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)', 'cfg(shuttle)', 'cfg(echeneis)'] }
rust_2018_idioms = { level = "warn", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"  # sometimes good to name what you are returning
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "allow"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
result_large_err = "allow"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

# disallowed-modules = "warn"
